--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "ng2-google-charts": "^3.5.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
