--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
-    "bootstrap": "^4.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "ng2-google-charts": "^3.5.0",
+    "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
