--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "bootstrap": "^4.0.0-beta",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ng2-google-charts": "^3.5.0",
